fix: add common-version
