# internal/pay-server/server/pay-server.go
@@ -12,19 +12,19 @@ import (
 	v1 "github.com/costa92/micros-service/pkg/api/pay-server/v1"
 )
 
-type PayService struct {
-	v1.UnimplementedPayServiceServer
+type PayServer struct {
+	v1.UnimplementedPayServerServer
 }
 
-func NewPayService() *PayService {
-	return &PayService{}
+func NewPayServer() *PayServer {
+	return &PayServer{}
 }
 
-func (s *PayService) Pay(ctx context.Context, req *payserver.PayRequest) (*payserver.PayResponse, error) {
+func (s *PayServer) Pay(ctx context.Context, req *payserver.PayRequest) (*payserver.PayResponse, error) {
 	return &payserver.PayResponse{}, nil
 }
 
-func (s *PayService) Detail(ctx context.Context, req *payserver.DetailRequest) (*payserver.DetailResponse, error) {
+func (s *PayServer) Detail(ctx context.Context, req *payserver.DetailRequest) (*payserver.DetailResponse, error) {
 	return &payserver.DetailResponse{
 		OrderId: req.OrderId,
 	}, nil
