# pkg/api/pay-server/v1/pay-serve.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: pay-server/v1/pay-service.proto
+// source: pay-server/v1/pay-serve.proto
 
 package v1
 
